<resources>
    <string name="app_name">Flora</string>
    <string name="max_username_chars">Cannot have more than %d characters.</string>
    <string name="uh_oh">Uh oh!</string>
    <string name="must_be_less_than_eligible_age_description">You must be at least %d years old to use Flora as per European instructions. Sorry for any inconvenience but everyone should abide by the law for a happy life :)</string>
    <string name="born_screen_title">When were you born?</string>
    <string name="born_screen_description">Since cycles can change over time, this helps us customize the app for you.</string>
    <string name="login_with_your_account">Login with your account</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="primary_button_test_tag">primary_button_test_tag</string>
    <string name="dropdown_with_border_test_tag">dropdown_with_border_test_tag</string>
    <string name="dropdown_pregnancy_test_tag">dropdown_pregnancy_test_tag</string>
    <string name="dropdown_miscarriages_test_tag">dropdown_miscarriages_test_tag</string>
    <string name="dropdown_abortions_test_tag">dropdown_abortions_test_tag</string>
    <string name="dropdown_race_test_tag">dropdown_race_test_tag</string>
    <string name="icon_back_test_tag">icon_back_test_tag</string>
    <string name="icon_next_test_tag">icon_next_test_tag</string>
    <string name="bottom_sheet_test_tag">bottom_sheet_test_tag</string>
    <string name="bottom_sheet_contraceptives_test_tag">bottom_sheet_contraceptives_test_tag</string>
    <string name="clickable_text_field_test_tag">clickable_text_field_test_tag</string>
    <string name="close_icon_test_tag">close_icon_test_tag</string>
    <string name="lottie_elegant_woman_test_tag">lottie_elegant_woman_test_tag</string>
    <string name="flora_dialog_test_tag">flora_dialog_test_tag</string>
    <string name="prediction_dialog_test_tag">flora_dialog_test_tag</string>
    <string name="registration_was_successful">Registration was successful!</string>
    <string name="login_was_successful">Login was successful!</string>
    <string name="profile">Profile</string>
    <string name="welcome_christos">Welcome %s</string>
    <string name="language">Language</string>
    <string name="done">DONE</string>
    <string name="pregnancy_stats">Pregnancy Stats</string>
    <string name="race">Race</string>
    <string name="contraceptives">Contraceptives</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="average_cycle">Average Cycle</string>
    <string name="gynosurgery_label">Gynecology description</string>
    <string name="gynosurgery_placeholder">Give a brief description about your gynecology surgery…</string>
    <string name="gynosurgery_title">Gynosurgery</string>
    <string name="onboarding_title_gynosurgery">Have you ever performed gynecology surgery?</string>
    <string name="medvits_placeholder">Tell us what you\'ve received in the past…</string>
    <string name="medvits_label">MedVits description</string>
    <string name="medVits">MedVits</string>
    <string name="enable_manage_data_consent">You have to enable Manage Data Consent</string>
    <string name="auto_mode">Auto Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="tap_to_toggle">Tap to toggle</string>
    <string name="enable_predictions">Enable Predictions</string>
    <string name="disable_predictions">Disable Predictions</string>
    <string name="enable_predictions_description">Enabling this option triggers machine learning for predicting your next cycle</string>
    <string name="metamask_description">Enable this option to connect to your personal Metamask wallet</string>
    <string name="manage_data_consent">Manage Data Consent</string>
    <string name="my_doctors">My Doctors</string>
    <string name="age">Age</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="version_flora">Version: 2025.02.12 (5)</string>
    <string name="register_now">Not yet registered? Register now.</string>
    <string name="want_to_logout_title">Logout?</string>
    <string name="want_to_logout_description">Click Yes to log out. You can log in whenever you want.</string>
    <string name="logout_was_successful">Logout was successful</string>
    <string name="or">Or</string>
    <string name="continue_as_an_anonymous_user">Continue as an anonymous user</string>
    <string name="connect_to_metamask">Enable Metamask</string>
    <string name="disconnect_from_metamask">Disable Metamask</string>
    <string name="something_went_wrong">Something went wrong. Internet maybe?</string>
    <string name="retry">Retry</string>
    <string name="you_have_to_enable_metamask">You have to enable Metamask</string>
    <string name="requested">Requested</string>
    <string name="doctor_item_name_text">Doctor Id: %s</string>
    <string name="granted">Granted</string>
    <string name="revoked">Revoked</string>
    <string name="no_signature_connect_to_metamask_first">No signature. Connect to Metamask first</string>
    <string name="doctor_was_rejected">Doctor was rejected</string>
    <string name="wrong_account_yours_is">No authorization for account %1$s</string>
    <plurals name="my_doctors_description">
        <item quantity="one">"%d doctor requested to help you. You may grant or revoke access to your data."</item>
        <item quantity="other">%d doctors requested to help you. You may grant or revoke access to your data.</item>
    </plurals>
</resources>
